--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 		<title>start.rm-r.org</title>
 	</head>
 	<body>
+		<div class="info-container">
+			<pre id="info-text"></pre>
+		</div>
 		<div class="content">
 			<div class="search-container">
 				<div class="logo-container">
